@@ -9,6 +9,7 @@ Add spell checking
 Jabber: Add jabber browser/disco
 Fix bind socket for direct connection
 Fix save history on win32
+Add option "Ignore this phrase" in context menu
 
 Version 0.9.1
 ICQ: Fix login
